--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "9.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "sass": "^1.26.3"
+    "sass": "^1.26.3",
+    "ya-bbcode": "^1.0.11"
   },
   "devDependencies": {
     "@types/node": "^12.12.31",
