--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.1",
     "react": "16.13.1",
